...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/familyHistoryTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yes"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/familyHistoryFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="No"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
            <TextView
...
                android:layout_height="wrap_content"
                />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/genderTrue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Male"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton android:id="@+id/genderFalse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>
            <TextView
                android:text="Blood Pressure (mmHg):"
                android:textSize="18dp"
                android:layout_gravity="left"
...
